--- a/page-template/css/style.css
+++ b/page-template/css/style.css
@@ -1,7 +1,7 @@
 body {
 	color:black;
 	font-family: 'Crimson Text', serif;
-	font-size:20px;
+	font-size:18px;
 }
 
 h1 {
@@ -28,7 +28,7 @@ h1 {
 }
 
 .mainphoto {
-	width:140%;
+	width:170%;
 	margin-left: -20%;
 }
 
@@ -36,7 +36,16 @@ h1 {
 	width:100%;
 }
 
-#disqus_thread{
-	display:block
-	;
+#disqus_thread {
+	display:block;
+}
+
+blockquote {
+	
+	width: 400px;
+	text-align: center; 
+	margin-left: -20%;
+	font-size:30px;
+	float:left;
+	font-family: 'Roboto Slab', serif;
 }
