Altered Slider align and Disqus
Altered slider and made disqus smaller

--- a/Features-Template-2.0/style2.css
+++ b/Features-Template-2.0/style2.css
@@ -200,6 +200,7 @@ p.dropcap:first-letter {
   position:relative;
   display: inline-block;
   line-height: 0;
+  text-align: center;
 }
  
 /* Could use a pseudo-element, but they’re currently
