Finally Centered Disqus, updated cover photo
Attempt 4

--- a/Features-Template-2.0/style2.css
+++ b/Features-Template-2.0/style2.css
@@ -57,7 +57,7 @@ p {
 /* Code for Javascript */
 
 .header {
-  background: url("pics/img0.jpg");
+  background: url("pics/img0Sm.jpg");
   background-size:cover;
   opacity: 1;
   top: 0;
