--- a/maintenance-mayhem/css/style.css
+++ b/maintenance-mayhem/css/style.css
@@ -56,12 +56,13 @@ table {
   position: relative
 }
 blockquote {
-  padding-left: 15%;
+  padding-left: 8%;
   padding-right: 35%;
   font-size: 25px;
   font-family: 'Maven Pro', sans-serif;
   font-weight: bold;
-  min-width: 400px;
+  min-width: 450px;
+  align:center;
 }
 #container.div {
   display: inline-block;
