Special issues, misc fixes

--- a/advertising/css/master.css
+++ b/advertising/css/master.css
@@ -25,6 +25,7 @@ footer a {
     color: white;
     position: relative;
     margin-top: -5px;
+    margin-bottom: 5px;
     box-shadow: 0px 5px 25px #aaa;
 }
 
@@ -77,13 +78,22 @@ input:checked + label {
 
 @media screen and (max-width: 1020px) {
   label {
-    font-size: 60%;
+    font-size: 75%;
   }
 }
 
 @media screen and (max-width: 400px) {
   label {
     padding: 2px;
+  }
+}
+
+@media screen and (max-width: 950px) {
+  .return-text {
+    display: none;
+  }
+  .leaderboard {
+    overflow: hidden;
   }
 }
 
@@ -187,6 +197,23 @@ input:checked + label {
 
 .img-responsive {
     width: 100%;
+}
+
+.img-responsive.special {
+    width: 75%;
+}
+
+.special:hover {
+    /*color: inherit;*/
+    position: relative;
+    margin-top: -5px;
+    margin-bottom: 5px;
+    box-shadow: 0px 5px 25px #aaa;
+}
+
+.special {
+  -webkit-transition: 200ms all ease;
+          transition: 200ms all ease;
 }
 
 .nine.push-left {
