--- a/2016/join/stylesheet.css
+++ b/2016/join/stylesheet.css
@@ -1,48 +1,4 @@
-@CHARSET "ISO-8859-1";
-/* Reset CSS
- * --------------------------------------- */
-body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,
-form,fieldset,input,textarea,p,blockquote,th,td {
-    padding: 0;
-    margin: 0;
-}
-a{
-	text-decoration:none;
-}
-table {
-    border-spacing: 0;
-}
-fieldset,img {
-    border: 0;
-}
-address,caption,cite,code,dfn,em,strong,th,var {
-    font-weight: normal;
-    font-style: normal;
-}
-strong{
-	font-weight: bold;
-}
-ol,ul {
-    list-style: none;
-    margin:0;
-    padding:0;
-}
-caption,th {
-    text-align: left;
 
-}
-h1,h2,h3,h4,h5,h6 {
-    font-weight: normal;
-    font-size: 100%;
-    margin:0;
-    padding:0;
-    color:#444;
-}
-q:before,q:after {
-    content:'';
-}
-abbr,acronym { border: 0;
-}
 
 
 /* Custom CSS
@@ -75,6 +31,32 @@ p{
 .hero-logo img{
   color: #383838;
 }
+
+#section4{
+  background-image: url(img/sports.jpg);
+  padding: 0 0 0 0;
+  color: #fff;
+  text-shadow: black 2px 2px 10px;
+}
+
+#section17{
+  background-image: url(img/utb.jpg);
+  padding: -15px -50px 0 0;
+  color: #fff;
+  text-shadow: black 2px 2px 10px;
+}
+
+
+#section4 .fp-tableCell {
+  top: -15vh;
+  position: relative;
+}
+
+#section17 .fp-tableCell {
+  top: -5vh;
+  position: relative;
+}
+
 
 /* Centered texts in each section
 * --------------------------------------- */
