--- a/2016/02/valentines-day/scss/style1.scss
+++ b/2016/02/valentines-day/scss/style1.scss
@@ -1,9 +1,9 @@
 $item_width: 300px;
-$sidebar_width: 300px;
-$color_primary: #f5f5f5;
-$color_secondary: #fff;
+$sidebar_width: 0px;
+$color_primary: #fdd0b3;
+$color_secondary: #fdd0b3;
 $color_link: #aa1e22;
-$anim-time: 0.2s;
+$anim-time: 0.1s;
 
 @import "base";
 @import "mediaqueries";
