--- a/2016/02/valentines-day/scss/_mediaqueries.scss
+++ b/2016/02/valentines-day/scss/_mediaqueries.scss
@@ -26,34 +26,6 @@ $viewport_xxl: 	$item_width * 6 + $sidebar_width; /* 6 columns */
 	.grid__item {
 		padding: 45px 45px 30px;
 	}
-
-	/* Demo ad */
-	body #cdawrap {
-		right: auto;
-		left: 30px;
-		top: auto;
-		bottom: 0;
-		background: none;
-		border: none;
-		width: 240px;
-		background: $color_primary;
-	}
-
-	body #cdawrap .carbon-text {
-		color: #7b7b7b;
-	}
-
-	body #cdawrap a.carbon-poweredby {
-		color: #7883C4;
-	}
-
-	body #cdawrap a:hover.carbon-poweredby {
-		color: #333;
-	}
-
-	body #cdawrap #cda-remove {
-		display: none;
-	}
 }
 
 @media screen and (min-width: $viewport_s) {
@@ -78,14 +50,17 @@ $viewport_xxl: 	$item_width * 6 + $sidebar_width; /* 6 columns */
 		right: 5px;
 		bottom: 5px;
 		left: 5px;
-		border: 1px solid rgba(74,74,74,0.075);
-		-webkit-transition: opacity 0.3s;
-		transition: opacity 0.3s;
+		border: 12px solid #000;
+    transition: all 200ms ease-in-out;
+    -webkit-transition: all 200ms ease-in-out;
 	}
 
 	.grid__item:hover::before,
 	.grid__item:focus::before {
-    border: 3px solid rgba(170,30,34,0.5);
+    transition: all 200ms ease-in-out;
+    -webkit-transition: all 200ms ease-in-out;
+    border: 12px solid rgba(0, 0, 0, 0) !important;
+    border: none;
 	}
 
 	.grid__item--loading.grid__item::before {
@@ -103,21 +78,21 @@ $viewport_xxl: 	$item_width * 6 + $sidebar_width; /* 6 columns */
 @media screen and (min-width: $viewport_l) {
 	/* 4 columns */
 	.grid__item {
-		width: 25%;
+		width: 33.33%;
 	}
 }
 
 @media screen and (min-width: $viewport_xl) {
 	/* 5 columns */
 	.grid__item {
-		width: 20%;
+		width: 33.33%;
 	}
 }
 
 @media screen and (min-width: $viewport_xxl) {
 	/* 6 columns */
 	.grid__item {
-		width: 16.66%;
+		width: 33.33%;
 	}
 }
 
@@ -160,10 +135,10 @@ $viewport_xxl: 	$item_width * 6 + $sidebar_width; /* 6 columns */
 		position: absolute;
 		top: 0;
 		right: 0;
-		background: $color_secondary;
-		border-bottom: 1px solid $color_primary;
+		background: #eeeff0;
+		border-bottom: 1px solid #eeeff0;
 		width: 100vw;
-		height: 50px;
+		height: 100vh;
 		pointer-events: none;
 		z-index: -1;
 	}
