--- a/2016/02/valentines-day/scss/_mediaqueries.scss
+++ b/2016/02/valentines-day/scss/_mediaqueries.scss
@@ -7,9 +7,9 @@ $viewport_xl: 	$item_width * 5 + $sidebar_width; /* 5 columns */
 $viewport_xxl: 	$item_width * 6 + $sidebar_width; /* 6 columns */
 
 @media screen and (min-width: $viewport_xs) {
-	html, 
-	body, 
-	.container, 
+	html,
+	body,
+	.container,
 	.main {
 		height: 100vh;
 	}
@@ -42,7 +42,7 @@ $viewport_xxl: 	$item_width * 6 + $sidebar_width; /* 6 columns */
 	/* 2 columns */
 	.grid__item {
 		width: 50%;
-		border: none;
+		// border: none;
 	}
 
 	.grid__item::before {
@@ -110,9 +110,6 @@ $viewport_xxl: 	$item_width * 6 + $sidebar_width; /* 6 columns */
 	}
 	.sidebar.sidebar--open ~ .main {
 		pointer-events: none;
-	}
-	.top-bar {
-		padding: 22px 15px 10px 60px;
 	}
 	.menu-toggle {
 		display: inline-block;
