Valentines day: header logos added, removed filler content

--- a/2016/02/valentines-day/scss/_base.scss
+++ b/2016/02/valentines-day/scss/_base.scss
@@ -691,3 +691,11 @@ p {
 		width: 100%;
 	}
 }
+
+.header-logos {
+	padding-top: 15px;
+	.center-logo {
+		padding-left: 15vw;
+		padding-right: 15vw;
+	}
+}
