--- a/2016/02/valentines-day/scss/_base.scss
+++ b/2016/02/valentines-day/scss/_base.scss
@@ -675,20 +675,22 @@ p {
 }
 
 .old-photo {
-	width: 40%;
+	width: 20%;
 	float: left;
 	padding: 15px;
 	img {
 		width: 100%;
+		padding-bottom: 20px;
 	}
 }
 
 .sports-photo {
-	width: 50%;
+	width: 20%;
 	float: left;
 	padding: 15px;
 	img {
 		width: 100%;
+		padding-bottom: 20px;
 	}
 }
 
